beryllium (1.3.9) debian;

  * Fix upload to DICOM of jpeg files (broken since 1.3.6).
  * Support of IssuerOfPatientId DICOM attribute.
  * Build with DICOM support by default. Use qmake CONFIG+=nodicom
  * to suppress all DICOM features.

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 22 Nov 2016 13:54:00 +0800

beryllium (1.3.8) debian;

  * Fix video editor.

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 10 Nov 2016 14:46:00 +0800

beryllium (1.3.7) debian;

  * Fix Gstreamer debug settings.

 -- Pavel Bludov <pbludov@gmail.com>  Mon, 03 Oct 2016 13:34:00 +0800

beryllium (1.3.6) debian;

  * Allow subfolders in the image/clip/videolog file names.

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 19 Aug 2016 16:06:00 +0800

beryllium (1.3.5) debian;

  * Motion detection is off by default

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 21 Apr 2016 11:32:00 +0800

beryllium (1.3.4) debian;

  * Fix video editor gstreamer 1.0 build
  * Fix DV enumeration in gstreamer 1.0 build
  * Add bindings for udisks2

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 10 Dec 2015 13:36:00 +0800

beryllium (1.3.3) debian;

  * Check for files already sent to a DICOM server

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 10 Dec 2015 13:36:00 +0800

beryllium (1.3.2) debian;

  * Fix USB plug detect

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 3 Dec 2015 12:00:00 +0800

beryllium (1.3.1) debian;

  * Record clips/images from all sources by default
  * Validate clips/images template

 -- Pavel Bludov <pbludov@gmail.com>  Wed, 18 Nov 2015 12:40:00 +0800

beryllium (1.3.0) debian;

  * RTMP streaming support

 -- Pavel Bludov <pbludov@gmail.com>  Mon, 05 Oct 2015 15:23:00 +0800

beryllium (1.2.7) debian;

  * workaround for compiz bug
  * https://bugs.launchpad.net/ubuntu/+source/openjdk-7/+bug/1110138

 -- Pavel Bludov <pbludov@gmail.com>  Mon, 27 Jul 2015 15:05:00 +0800

beryllium (1.2.6) debian;

  * fix clip remove on click
  * Mono style icons
